# advent-of-code

./: .gitignore  README.md  pyproject.toml  solver_framework.py  utils.py
2022/: day_1.py
2022/day_1/: main.py
2023/: day_10.py  day_10_v1.py  day_11.py  day_12.py  day_12_v1.py  day_13_v1.py  day_13_v2.py  day_14_v1.py  day_14_v2.py  day_15_v1.py  day_15_v2.py  day_16.py  day_1_v1.py  day_1_v2.py  day_2_v1.py  day_2_v2.py  day_3_v1.py  day_3_v2.py  day_4_v1.py  day_4_v2.py  day_5_v1.py  day_5_v2.py  day_6_v2.py  day_7_v1.py  day_7_v2.py  day_8_v1.py  day_8_v2.py  day_9.py
2023/day_1/: main_v1.py  main_v2.py
2023/day_2/: main_v1.py  main_v2.py
2023/day_3/: main_v1.py  main_v2.py
2023/day_4/: main_v1.py  main_v2.py
2023/day_5/: main_v1.py  main_v2.py
2023/day_6/: main_v1.py
2023/day_7/: main_v1.py  main_v2.py
2023/day_8/: main_v1.py
2025/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py
inputs/: 2023_day_8.txt
