[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Julien Perichon <julienperichon023@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
